AC_INIT([cplanet],[0.11],[https://fossil.etoilebsd.net/cplanet],[cplanet])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE([1.11 foreign subdir-objects no-dist-gzip dist-xz])
AM_SILENT_RULES([yes])

AX_LIB_SQLITE3()

AC_PROG_CC_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
